--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+.custom-scroll::-webkit-scrollbar{
+  width: 8px;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb{
+  border-radius: 30px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover{
+  background-color: #ccc;
+}
+
 .app{
   height: 100vh;
   width: 100%;
@@ -15,12 +29,13 @@
   flex: 1;
   width: 100%;
   overflow-x: auto;
-  padding: 20px;
 }
 
 .app_boards{
   /* min-width: fit-content; */
+  padding: 20px 20px 0 20px;
   height: 100%;
+  min-width: fit-content;
   display: flex;
   gap: 30px;
   
