--- a/src/Components/Board/Board.css
+++ b/src/Components/Board/Board.css
@@ -10,11 +10,30 @@
     display: flex;
 }
 
+.board_top_more{
+    position: relative;
+}
+
+.board_top_more svg,
+.board_dropdown p{
+    /* position: relative; */
+    cursor: pointer;
+}
+
+.board_dropdown{
+    background-color: #fff;
+    width: 130px;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 1px 0 20px rgba(0, 0, 0, 0.1);
+}
+
 .board_top_title{
     flex: 1;
     display: flex;
     align-items: center;
     font-weight: bold;
+    gap: 5px;
 }
 
 .board_top_title span{
@@ -34,11 +53,11 @@
 }
 
 .board_cards_add{
-    background-color: #fff;
+    background-color: #fff !important;
     border-radius: 5px;
     box-shadow: 1px 2px  0 1px rgba(0, 0, 0, 0.15);
 }
 
 .board_cards_add:hover{
-    box-shadow: 1px 2px  0 1px #ccc;
+    box-shadow: 1px 2px  0 1px #ccc !important;
 }
