--- a/src/Components/Card/Cardinfo/Cardinfo.css
+++ b/src/Components/Card/Cardinfo/Cardinfo.css
@@ -4,6 +4,49 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
+    width: 600px;
 }
 
-.
+.cardinfo_box{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.cardinfo_box_title{
+    font-weight: bold;
+    font-size: 1.3rem;
+    display: flex;
+    gap: 10px;
+}
+
+.cardinfo_box_body{
+    width: fit-content;
+}
+
+.cardinfo_box_body input{
+    outline: none;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    padding: 10px;
+    font-size: 1rem;
+}
+
+.cardinfo_box_colors{
+    display: flex;
+    gap: 15px;
+    align-items: center;
+}
+
+.cardinfo_box_colors li{
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
+    list-style: none;
+    border: 3px solid transparent;
+    transition: 200ms;
+}
+
+.cardinfo_box_colors .active{
+    border: 3px solid yellow;
+}
