--- a/src/Components/Card/Cardinfo/Cardinfo.css
+++ b/src/Components/Card/Cardinfo/Cardinfo.css
@@ -50,3 +50,44 @@
 .cardinfo_box_colors .active{
     border: 3px solid yellow;
 }
+
+.cardinfo_box_progress-bar{
+    height: 10px;
+    border-radius: 20px;
+    width: 100%;
+    border: 1px solid #ccc;
+}
+
+.cardinfo_box_progress{
+    height: 10px;
+    border-radius: 20px;
+    background-color: #1379ec;
+}
+
+.cardinfo_box_progress-active{
+    background-color: limegreen;
+}
+
+.cardinfo_box_list{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.cardinfo_task{
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    padding: 8px 0;
+}
+
+.cardinfo_task p{
+    flex: 1;
+    line-height: 20px;
+}
+
+.cardinfo_task input, .cardinfo_task svg{
+    height: 18px;
+    width: 18px;
+    cursor: pointer;
+}
